2001-02-05   Benjamin Kosnik  <bkoz@redhat.com>

	* include/bits/locale_facets.h (class moneypunct): Fix typos.
	* libsupc++/pure.cc: Revert.

2001-02-05   Benjamin Kosnik  <bkoz@redhat.com>

	* acinclude.m4 (GLIBCPP_CHECK_MATH_DECL_1): New macro.
	(GLIBCPP_CHECK_MATH_DECL_2): New macro.
	(GLIBCPP_CHECK_MATH_DECL_3): New macro.
	(GLIBCPP_CHECK_MATH_DECL_AND_LINKAGE_1): Use it, check for _* too.
	(GLIBCPP_CHECK_MATH_DECL_AND_LINKAGE_2): Same.
	(GLIBCPP_CHECK_MATH_DECL_AND_LINKAGE_3): Same.
	(GLIBCPP_CHECK_MATH_SUPPORT): Remove explicit checks for _* versions.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	
2001-02-05  Mark Mitchell  <mark@codesourcery.com>

	* include/bits/locale_facets.tcc: Remove `static' keyword on
	function definitions.
	* include/bits/std_streambuf.h: Likewise.
	* src/Makefile.am: Remove use of -fimplicit-templates.
	* src/Makefile.in: Regenerated.
	* src/locale-inst.cc: Explicitly instantiate more functions.
	* src/msic-inst.cc: Likewise.
	* src/string-inst.cc: Likewise.

2001-02-05  Benjamin Kosnik  <bkoz@redhat.com>

	* acinclude.m4 (GLIBCPP_EXPORT_INSTALL_INFO): New
	macro. Consolidate all the bits to do with where includes might be
	installed.
	* aclocal.m4: Regenerate.
	* configure.in: Use it.
	* configure: Regenerate.	
	* src/Makefile.am (targetincludep): Use simplified rules.
	(targetincludep): Rename gxx_target_include_dir.
	(myincludep): Rename gxx_include_dir.
	* src/Makefile.in: Regenerate.
	* libsupc++/Makefile.am: Use simplified rules.
	* libsupc++/Makefile.in: Regenerate.
	
2001-02-05  Benjamin Kosnik  <bkoz@redhat.com>

	* include/c_std/bits/std_cerrno.h: Correct date format for copyright.
	* include/c_std/bits/std_cctype.h: Same.
	* include/c_std/bits/std_cassert.h: Same.
	* include/c_std/bits/std_cstdarg.h: Same.
	* include/c_std/bits/std_cstddef.h: Same.
	
	* include/c_std/bits/std_cstdio.h: Undefine all names brought into
	namespace std.
	* include/c_std/bits/std_ctime.h: Same.