@@ -1,9 +1,15 @@
-2001-02-05   Benjamin Kosnik  <bkoz@redhat.com>
+2001-02-06  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* acinclude.m4 (gxx_include_dir): Quote, fix regression.
+	* aclocal.m4: Regenerate.
+	* configure: Regenerate.
+	
+2001-02-05  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* include/bits/locale_facets.h (class moneypunct): Fix typos.
 	* libsupc++/pure.cc: Revert.
 
-2001-02-05   Benjamin Kosnik  <bkoz@redhat.com>
+2001-02-05  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* acinclude.m4 (GLIBCPP_CHECK_MATH_DECL_1): New macro.
 	(GLIBCPP_CHECK_MATH_DECL_2): New macro.
